--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "laravel/framework": "^9.0",
         "laravel/socialite": "^5.2",
         "laravel/tinker": "^2.5",
+        "maatwebsite/excel": "^3.1",
+        "psr/simple-cache": "^2.0",
         "spatie/laravel-activitylog": "^4.0",
         "spatie/laravel-permission": "^5.5.0",
         "yajra/laravel-datatables-buttons": "^4.10",
