--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "laravel/tinker": "^2.5",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^2.0",
+        "realrashid/sweet-alert": "^5.1",
         "spatie/laravel-activitylog": "^4.0",
         "spatie/laravel-permission": "^5.5.0",
         "yajra/laravel-datatables-buttons": "^4.10",
